refactoring: 호스트가 자기 경기에 요청보낼때 리팩토링 필요