@@ -1,6 +1,12 @@
 package com.example.playgroundmanage.althlectis.dto.response;
 
+import com.example.playgroundmanage.althlectis.vo.impl.TeamAthleticsParticipant;
+import com.example.playgroundmanage.team.vo.Team;
+
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 public record SubTeamResponse(
         Long teamId,
@@ -8,22 +14,21 @@ public record SubTeamResponse(
 
         String teamDescription,
 
-        Long subTeamId,
 
         String teamProfileImg,
 
-        List<UserInTeamDetailsResponse>users
+        List<UserInTeamDetailsResponse> users
 ) {
-  /*  public static SubTeamResponse of(AthleticsSubTeam subTeam) {
+    public static SubTeamResponse of(Map.Entry<Team, List<TeamAthleticsParticipant>> map) {
         return new SubTeamResponse(
-                subTeam.getTeam().getId(),
-                subTeam.getTeam().getTeamName(),
-                subTeam.getTeam().getDescription(),
-                subTeam.getId(),
-                subTeam.getTeam().getTeamProfileImg().getFileUrl(),
-                subTeam.getGameParticipants().stream()
+                map.getKey().getId(),
+                map.getKey().getTeamName(),
+                map.getKey().getDescription(),
+                map.getKey().getTeamProfileImg().getFileUrl(),
+                map.getValue().stream()
                         .map(UserInTeamDetailsResponse::of)
-                        .toList()
+                        .collect(Collectors.toList())
         );
-    }*/
+    }
+
 }
